--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <script src="./js/preloader.js" defer></script>
+    <!-- <script src="./js/preloader.js" defer></script> -->
     <!-- <script src="./js/preloader.js" async></script> -->
     <script src="./js/bg-elements.js" defer></script>
     <script src="./js/modal.js" defer></script>
@@ -30,7 +30,7 @@
 
 <body>
     <!-- Page Preloder -->
-    <div id="preloder" class="preloder">
+    <div id="preloder" class="preloder active">
         <div class="loader"></div>
     </div>
     
@@ -52,7 +52,7 @@
                                 <li class="active"><a href="./index.html">Homepage</a></li>
                                 <li><a href="./categories.html">Categories <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="./categories.html">Categories</a></li>
+                                        <!-- <li><a href="./categories.html">Categories</a></li> -->
                                     </ul>
                                 </li>
                             </ul>
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <div class="trending__product">
+                    <!-- <div class="trending__product">
                         <div class="row">
                             <div class="col-lg-8 col-md-8 col-sm-8">
                                 <div class="section-title">
@@ -158,7 +158,7 @@
                                         </ul>
                                         <h5><a href="/anime-details.html">The Seven Deadly Sins: Wrath of the Gods</a></h5>
                                     </div>
-                                </div>
+                                </div> 
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="product__item">
@@ -554,7 +554,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="product__sidebar">
@@ -563,7 +563,7 @@
                                 <h5>Top Views</h5>
                             </div>
                             <div class="filter__gallery">
-                                <div class="product__sidebar__view__item set-bg mix day years"
+                                <!-- <div class="product__sidebar__view__item set-bg mix day years"
                                     data-setbg="img/trending/trend-1.jpg">
                                     <div class="ep">18 / ?</div>
                                     <div class="view"><i class="fa fa-eye"></i> 9141</div>
@@ -592,7 +592,7 @@
                                     <div class="ep">18 / ?</div>
                                     <div class="view"><i class="fa fa-eye"></i> 9141</div>
                                     <h5><a href="/anime-details.html">Fate stay night unlimited blade works</a></h5>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
